examples/test/testpolicy3688.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3688
  namespace: namespace130
spec:
  podSelector:
    matchLabels:
      key26: value23
      key36: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value15
          key30: value1
          key20: value23
      podSelector:
        matchLabels:
          key34: value34
          key39: value25
